table and contrast fix

--- a/sam-styles/tag/_tag.scss
+++ b/sam-styles/tag/_tag.scss
@@ -47,5 +47,5 @@
 .sam-tag--date {
   font-size: 18px;
   font-style: italic;
-  color: #71767a;
+  color: #565c65;
 }
