--- a/sam-styles/utilities/_text-styles.scss
+++ b/sam-styles/utilities/_text-styles.scss
@@ -5,3 +5,7 @@
 .text-semibold {
   font-weight: 600 !important;
 }
+
+.text-center {
+  text-align: center !important;
+}
